# tiny_lib

./: LICENSE  README.md
echo_server/: CMakeLists.txt
echo_server/include/: tiny_types.h
echo_server/src/client/: CMakeLists.txt  client.cpp
echo_server/src/server/: CMakeLists.txt  server.cpp  server.h
echo_server/src/socket/: CMakeLists.txt  epoll.cpp  epoll.h  inet_address.hpp  socket.cpp  socket.h
tiny_lib/examlple/: CMakeLists.txt  web_demo.cpp
tiny_lib/socket_lib/: CMakeLists.txt
tiny_lib/socket_lib/include/: socket.h  tiny_type.h
tiny_lib/socket_lib/lib/: tinynetwork.ilk
tiny_lib/socket_lib/src/: socket.cpp
